# celda_ur

./: README.md
celda_control/: CMakeLists.txt  package.xml
celda_control/config/: controlador_config.yaml
celda_control/config/ur3e/: joint_limits.yaml
celda_control/launch/: iniciar_robot.launch.py
celda_control/rviz/: urdf.rviz
celda_control/urdf/: robot_celda_control.urdf.xacro
celda_descripcion/: CMakeLists.txt  package.xml
celda_descripcion/launch/: ver_robot.launch.py
celda_descripcion/urdf/: onrobot_macro.xacro  rg2_macro.xacro  robot_celda.urdf.xacro  robot_celda_macro.xacro  robot_celda_macro_viejo.xacro  robot_celda_viejo.urdf.xacro
celda_descripcion/urdf/inc/: rg_common.xacro
celda_moveit_config/: CMakeLists.txt  package.xml
celda_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  moveit_controllers_viejo.yaml  robot_celda.ros2_control.xacro  robot_celda.srdf  robot_celda.urdf.xacro
celda_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur3e_pick_and_place/: CMakeLists.txt  package.xml
ur3e_pick_and_place/launch/: celda_pick_and_place.launch.py  ur3e_pick_and_place.launch.py
ur3e_pick_and_place/src/: celda_pick_and_place.cpp  ur3e_pick_and_place.cpp
vision/: camara_calibracion.npz  setup.py
vision/vision/: vision.py
